--- a/Concept/room/app/src/main/AndroidManifest.xml
+++ b/Concept/room/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.paige.myapplication">
+    package="com.paige.room">
 
     <application
         android:allowBackup="true"
@@ -9,12 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListActivity">
-        </activity>
-        <activity
-            android:name=".AppActivity"
-            android:label="@string/title_activity_app"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
